# python-project-lvl2

./: .gitignore  Makefile  README.md  help.txt  pyproject.toml
gendiff/: engine.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
