[tool.poetry]
name = "belousovromnik-gendiff"
version = "0.1.0"
description = "Проект Вычислитель отличий"
authors = ["belousovromnik <belousovromnik@yandex.ru>"]
repository = 'https://github.com/belousovromnik/python-project-lvl2'

packages = [
{include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
